# mail-guard

./: .gitignore  DEPLOYMENT.md  GOOGLE_OAUTH_SETUP.md  IMPROVEMENTS_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  docker-compose.yml
.claude/: settings.json
backend/: .dockerignore  .env.example  DATABASE.md  Dockerfile  LLM_GUIDE.md  MONITORING.md  TESTING.md  activity_logger.py  auth.py  auth_utils.py  cache_utils.py  classifier.py  config.py  database.py  email_parser.py  export_utils.py  logger_config.py  main.py  main_old.py  main_refactored.py  prompts.py  prompts.txt  pyproject.toml  pytest.ini  requirements.txt  schemas.py  validators.py
backend/middleware/: __init__.py  request_id.py  response_time.py
backend/routes/: __init__.py  abtest.py  active_learning.py  adversarial.py  analytics.py  auth.py  classify.py  cost_optimization.py  drift_detection.py  ensemble.py  feedback.py  gmail.py  health.py  model_comparison.py  monitoring.py  oauth.py  patterns.py  threats.py
backend/tests/: __init__.py  conftest.py  test_auth_routes.py  test_classifier.py  test_classify_routes.py
frontend/: .dockerignore  .env.example  Dockerfile  FRONTEND_GUIDE.md  index.html  package.json
frontend/src/: App.jsx  AuthContext.jsx  ThemeContext.jsx  main.jsx
frontend/src/api/: axios.js
frontend/src/components/: About.jsx  Analytics.jsx  BatchClassifier.jsx  Classifier.jsx  Dashboard.jsx  GmailInbox.jsx  HistoryTable.jsx  Login.jsx  MetricCard.jsx  Register.jsx
frontend/src/utils/: constants.js  errorHandler.js  logger.js
