[project]
name = "secure-ai-sentinel"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "openai>=1.3.8",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "pyjwt>=2.8.0",
    "python-multipart>=0.0.6",
    "itsdangerous>=2.0.0",
    "authlib>=1.3.0",
    "httpx>=0.24.0",
]
